--- a/tokio-postgres/Cargo.toml
+++ b/tokio-postgres/Cargo.toml
@@ -35,12 +35,12 @@ with-serde_json-1 = ["postgres-types/with-serde_json-1"]
 with-uuid-0_8 = ["postgres-types/with-uuid-0_8"]
 
 [dependencies]
+actix-utils = "1.0.4"
 bytes = "0.5"
 byteorder = "1.0"
 fallible-iterator = "0.2"
 futures = "0.3"
 log = "0.4"
-parking_lot = "0.10"
 percent-encoding = "2.0"
 pin-project-lite = "0.1"
 phf = "0.8"
@@ -62,4 +62,3 @@ serde-1 = { version = "1.0", package = "serde" }
 serde_json-1 = { version = "1.0", package = "serde_json" }
 uuid-07 = { version = "0.7", package = "uuid" }
 uuid-08 = { version = "0.8", package = "uuid" }
-
