--- a/tokio-postgres/Cargo.toml
+++ b/tokio-postgres/Cargo.toml
@@ -35,14 +35,14 @@ with-serde_json-1 = ["postgres-types/with-serde_json-1"]
 with-uuid-0_8 = ["postgres-types/with-uuid-0_8"]
 
 [dependencies]
-ntex = "0.1.17"
-bytes = "0.5"
-byteorder = "1.0"
+ntex = "0.2.0-b.4"
+bytes = "0.5.6"
+byteorder = "1.2"
 fallible-iterator = "0.2"
-futures = "0.3"
+futures = "0.3.12"
 log = "0.4"
 percent-encoding = "2.0"
-pin-project-lite = "0.1"
+pin-project-lite = "0.2.4"
 phf = "0.8"
 postgres-protocol = { version = "0.5.0", path = "../postgres-protocol" }
 postgres-types = { version = "0.1.0", path = "../postgres-types" }
@@ -50,7 +50,7 @@ tokio = { version = "0.2", features = ["io-util"] }
 
 [dev-dependencies]
 tokio = { version = "0.2", features = ["full"] }
-env_logger = "0.7"
+env_logger = "0.8"
 criterion = "0.3"
 
 bit-vec-06 = { version = "0.6", package = "bit-vec" }
