--- a/postgres/Cargo.toml
+++ b/postgres/Cargo.toml
@@ -29,12 +29,12 @@ with-serde_json-1 = ["tokio-postgres/with-serde_json-1"]
 with-uuid-0_8 = ["tokio-postgres/with-uuid-0_8"]
 
 [dependencies]
-bytes = "0.5"
+bytes = "1.0"
 fallible-iterator = "0.2"
 futures = "0.3"
 tokio-postgres = { version = "0.5.0", path = "../tokio-postgres" }
 
-tokio = { version = "0.2", features = ["rt-core"] }
+tokio = { version = "1" }
 log = "0.4"
 
 [dev-dependencies]
