--- a/tokio-postgres/Cargo.toml
+++ b/tokio-postgres/Cargo.toml
@@ -25,7 +25,7 @@ circle-ci = { repository = "sfackler/rust-postgres" }
 
 [features]
 default = ["runtime"]
-runtime = ["tokio/dns", "tokio/net", "tokio/time"]
+runtime = ["tokio/net", "tokio/time"]
 
 with-bit-vec-0_6 = ["postgres-types/with-bit-vec-0_6"]
 with-chrono-0_4 = ["postgres-types/with-chrono-0_4"]
@@ -35,21 +35,21 @@ with-serde_json-1 = ["postgres-types/with-serde_json-1"]
 with-uuid-0_8 = ["postgres-types/with-uuid-0_8"]
 
 [dependencies]
-ntex = "0.2.0-b.4"
-bytes = "0.5.6"
+ntex = "0.3.1"
+bytes = "1.0"
 byteorder = "1.2"
 fallible-iterator = "0.2"
-futures = "0.3.12"
+futures = "0.3.13"
 log = "0.4"
 percent-encoding = "2.0"
 pin-project-lite = "0.2.4"
 phf = "0.8"
 postgres-protocol = { version = "0.5.0", path = "../postgres-protocol" }
 postgres-types = { version = "0.1.0", path = "../postgres-types" }
-tokio = { version = "0.2", features = ["io-util"] }
+tokio = "1"
 
 [dev-dependencies]
-tokio = { version = "0.2", features = ["full"] }
+tokio = { version = "1" }
 env_logger = "0.8"
 criterion = "0.3"
 
