--- a/postgres-protocol/Cargo.toml
+++ b/postgres-protocol/Cargo.toml
@@ -11,7 +11,7 @@ readme = "../README.md"
 [dependencies]
 base64 = "0.11"
 byteorder = "1.0"
-bytes = "1.0"
+bytes = { version = "0.1.1", package = "ntex-bytes" }
 fallible-iterator = "0.2"
 hmac = "0.7"
 md5 = "0.7"
