--- a/postgres-types/Cargo.toml
+++ b/postgres-types/Cargo.toml
@@ -20,7 +20,7 @@ with-serde_json-1 = ["serde-1", "serde_json-1"]
 with-uuid-0_8 = ["uuid-08"]
 
 [dependencies]
-bytes = "1.0"
+bytes = { version = "0.1.1", package = "ntex-bytes" }
 fallible-iterator = "0.2"
 postgres-protocol = { version = "0.5.0", path = "../postgres-protocol" }
 postgres-derive = { version = "0.4.0", optional = true, path = "../postgres-derive" }
