--- a/tokio-postgres/Cargo.toml
+++ b/tokio-postgres/Cargo.toml
@@ -35,18 +35,18 @@ with-serde_json-1 = ["postgres-types/with-serde_json-1"]
 with-uuid-0_8 = ["postgres-types/with-uuid-0_8"]
 
 [dependencies]
-ntex = "0.3.15"
-bytes = "1.0"
+ntex = "0.4.0-b.1"
+bytes = { version = "0.1.1", package = "ntex-bytes" }
 byteorder = "1.2"
 fallible-iterator = "0.2"
 futures = "0.3.13"
 log = "0.4"
 percent-encoding = "2.0"
-pin-project-lite = "0.2.5"
+pin-project-lite = "0.2"
 phf = "0.8"
 postgres-protocol = { version = "0.5.0", path = "../postgres-protocol" }
 postgres-types = { version = "0.1.0", path = "../postgres-types" }
-tokio = "1"
+tokio = { version = "1", default-features = false }
 
 [dev-dependencies]
 tokio = { version = "1" }
