--- a/tokio-postgres/Cargo.toml
+++ b/tokio-postgres/Cargo.toml
@@ -35,7 +35,7 @@ with-serde_json-1 = ["postgres-types/with-serde_json-1"]
 with-uuid-0_8 = ["postgres-types/with-uuid-0_8"]
 
 [dependencies]
-ntex = { version = "0.5.0", default-features = false }
+ntex = "0.5.6"
 bytes = { version = "0.1.8", package = "ntex-bytes" }
 byteorder = "1.4"
 fallible-iterator = "0.2"
