--- a/tokio-postgres/Cargo.toml
+++ b/tokio-postgres/Cargo.toml
@@ -50,6 +50,7 @@ tokio = { version = "1", default-features = false }
 
 [dev-dependencies]
 tokio = { version = "1" }
+ntex = { version = "0.5.6", features = ["tokio"] }
 env_logger = "0.8"
 criterion = "0.3"
 
