--- a/tokio-postgres/Cargo.toml
+++ b/tokio-postgres/Cargo.toml
@@ -36,7 +36,7 @@ with-uuid-0_8 = ["postgres-types/with-uuid-0_8"]
 
 [dependencies]
 ntex = "0.5.6"
-bytes = { version = "0.1.8", package = "ntex-bytes" }
+# bytes = { version = "0.1.8", package = "ntex-bytes" }
 byteorder = "1.4"
 fallible-iterator = "0.2"
 futures = "0.3.13"
